@@ -1,3 +1,8 @@
+Thu Jan  6 23:28:03 2005  Tim Janik  <timj@gtk.org>
+
+	* gslloader-bsewave.c: removed <= 0.6.4 compat code, since we haven't
+	released .bsewave files of that kind yet.
+
 Thu Jan  6 23:03:36 2005  Tim Janik  <timj@gtk.org>
 
 	* bse/gslloader-pat.cc: 
